--- a/conclusion.tex
+++ b/conclusion.tex
@@ -66,9 +66,12 @@ The project makes the following technical contributions:
     \item \textbf{Comprehensive Evaluation:} Established evaluation criteria and test procedures for assessing style transfer quality
 \end{enumerate}
 \subsection{Meeting Project Objectives}
-The project successfully met all stated objectives:
+
+The project successfully met all stated objectives. Table \ref{tab:objective_status} provides a summary of the completion status for each defined project objective, demonstrating that all goals were achieved.
+
 \begin{table}[H]
 \caption{Objective Completion Status}
+\label{tab:objective_status}
 \centering
 \begin{tabular}{|p{8cm}|c|}
 \hline
